--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <ul id="lista"></ul>
     <script src="index.js"></script>
 </body>
 </html>
